--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="connect_failed">Failed to connect</string>
     <string name="rate">Rate</string>
     <string name="sampling_rate">Sampling rate</string>
+    <string name="recording">Recording…</string>
+    <string name="not_recording">Not recording</string>
 </resources>
