--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="recording">Recording…</string>
     <string name="not_recording">Not recording</string>
     <string name="reconnecting">Reconnecting…</string>
+    <string name="sensor_status_channel">Sensor Status</string>
 </resources>
