--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="not_recording">Not recording</string>
     <string name="reconnecting">Reconnecting…</string>
     <string name="sensor_status_channel">Sensor Status</string>
+    <string name="chart">Chart</string>
 </resources>
